2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5.9 TAGGED FOR RELEASE ***

	* generic/tkText.c (DumpLine): s/segPtr->size/currentSize/
	throughout, but particularly in if lineChanged block where segPtr
	may no longer be valid. [Bug 3053347]

	* unix/Makefile.in: add valgrind target
	* unix/configure, unix/tcl.m4: SHLIB_LD_LIBS='${LIBS}' for OSF1-V*.
	Add /usr/lib64 to set of auto-search dirs. [Bug 1230554]
	(SC_PATH_X): Correct syntax error when xincludes not found.

	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST
	macro and --enable-embedded-manifest configure arg added to
	support manifest embedding where we know the magic.  Help prevents
	DLL hell with MSVC8+.

2010-08-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/ttk_spinbox.n (new), doc/ttk_*.3, doc/ttk_*.n:
	* generic/ttk/ttkGenStubs.tcl:
	* generic/ttk/ttk.decls, generic/ttk/ttkDecls.h:
	* generic/ttk/ttkButton.c, generic/ttk/ttkCache.c:
	* generic/ttk/ttkClamTheme.c, generic/ttk/ttkClassicTheme.c:
	* generic/ttk/ttkDefaultTheme.c, generic/ttk/ttkElements.c:
	* generic/ttk/ttkEntry.c, generic/ttk/ttkFrame.c:
	* generic/ttk/ttkImage.c, generic/ttk/ttkInit.c:
	* generic/ttk/ttkLabel.c, generic/ttk/ttkLayout.c:
	* generic/ttk/ttkNotebook.c, generic/ttk/ttkPanedwindow.c:
	* generic/ttk/ttkProgress.c, generic/ttk/ttkScale.c:
	* generic/ttk/ttkScroll.c, generic/ttk/ttkScrollbar.c:
	* generic/ttk/ttkSeparator.c, generic/ttk/ttkSquare.c:
	* generic/ttk/ttkState.c, generic/ttk/ttkStubInit.c:
	* generic/ttk/ttkStubLib.c, generic/ttk/ttkTagSet.c:
	* generic/ttk/ttkTheme.c, generic/ttk/ttkTheme.h:
	* generic/ttk/ttkThemeInt.h, generic/ttk/ttkTrace.c:
	* generic/ttk/ttkTrack.c, generic/ttk/ttkTreeview.c:
	* generic/ttk/ttkWidget.c, generic/ttk/ttkWidget.h:
	* library/ttk/spinbox.tcl (new):
	* library/ttk/altTheme.tcl, library/ttk/aquaTheme.tcl:
	* library/ttk/button.tcl, library/ttk/clamTheme.tcl: